<resources>
    <string name="app_name">CalBurn</string>
    <string name="bmi">BMI</string>
    <string name="bmiHelper">Your BMI calculated from current height and weight. \n \n Healthy BMI range: 18.5 to 25</string>
    <string name="diet">Diet</string>
    <string name="food">Food</string>
    <string name="calories">Calories</string>
    <string name="caloriesHelper">Your gained calories depending on the food you ate</string>
    <string name="weight">Weight</string>
    <string name="weightHelper">Your weight in kg\'s</string>
    <string name="height">Height</string>
    <string name="heightHelper">Your height in cm\'s</string>
    <string name="exercise">Exercise</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="enterdata">Enter Data</string>
    <string name="stats">Your current stats</string>
    <string name="foodcal">Food Calories</string>
    <string name="cycle">Cycling</string>
    <string name="cyclesub">cycling helps to burn calories and a good exercise for legs</string>
    <string name="run">Running</string>
    <string name="runsub">running helps to improve stamina and burn calories to great extent</string>
    <string name="pranayam">Pranayam yoga</string>
    <string name="pranayamsub">pranayam yoga helps to control mind and body</string>
    <string name="pullups">Pull Ups</string>
    <string name="pullupssub">pull ups helps to improve upper body muscles</string>
    <string name="pushups">Push Ups</string>
    <string name="pushupssub">push ups helps to maintain the strength of the body</string>
    <string name="situps">Sit Ups</string>
    <string name="situpssub">sit ups improve the legs muscles and aim at lower body</string>
    <string name="skipping">Skipping</string>
    <string name="skippingsub">skipping improves your stamina and strength</string>
    <string name="calburned">Calories Burned</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="login">Please login to continue</string>
    <string name="error">Oops! something went wrong, try again</string>
    <string name="network">Oops! something went wrong, make sure you are connected to internet</string>
    <string name="feedbacktext">Open and sign in</string>
    <string name="sharetext">Download the app from the below link to burn and track your calories and much more \n \n</string>
    <string name="sharetitle">Share app to </string>
    <string name="sharesubject">Please have a look</string>
    <string name="dietcreate">Creating a new diet for you....</string>

    <string name="clientID" translatable="false">622383144574-bmt8ct2b850eihed7m4h48ar39tvifvh.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation</string>
</resources>
